# Engram

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
cassettes/embed/: 03a704d04ce21a9f.json  03acc560ebdf96f4.json  05ea37cdc76d86b8.json  1d609f7d100727fc.json  1e09ef8c08e8035f.json  1efb7448afc12d41.json  284189761df77b8d.json  2d563022e306593d.json  34a627bc9e14c515.json  3545c6a48745ac2b.json  3946b4c26f06932e.json  401daf3ca12688fd.json  46160a757b65d19f.json  4b1e580aa0b6ef6e.json  4cd0f6e42b35b0f3.json  56a9f2d5785e39fa.json  577641f9f8a886d5.json  59dfebd7e9cbf731.json  612ca0f644e1b400.json  62da4a76228217a2.json  6a67dc9f5fda9987.json  6ced6d1bcaa0f43f.json  6f7ee5cfa67a7a57.json  740ea8ea47fe59fb.json  75d8b44872c570ee.json  7d119594c8e7dddc.json  826dbe8632ac5ed5.json  855fef6283ec833d.json  8c79d45e482119b3.json  946441b07115b724.json  9f127d88ca549144.json  a2908d9b5942b094.json  a70e12905a9e0e2f.json  aa6622c60e8f876a.json  abffa7d61a2f0453.json  ad293c97b2e312c6.json  b091b9c3018ee6a1.json  b14b618c6f371f85.json  b79deb2172e27de5.json  b7c41b7b3d237ce8.json  (+14 more)
cassettes/generate/: 00cf4cfb2db2214e.json  013bd016b192173a.json  0339b3b655cd0da7.json  037638696dd8ebe8.json  (+165 more)
dashboard/: app.py
data/: seed.py
engram/: __init__.py
results/: report.json  showcase.json
scripts/: build_showcase.py  calibrate.py  inspect_memory.py  run_experiment.py  smoke.py
tests/: test_curation.py  test_domain.py  test_harness.py  test_llm.py  test_memory.py  test_reflect.py  test_retrieval.py  test_runtime.py
(+12 files in other folders)
