[project]
name = "engram"
version = "0.1.0"
description = "An LLM agent that measurably improves at a task by curating its own memory — no fine-tuning."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "google-genai==2.10.0",
    "python-dotenv==1.2.2",
    "numpy==2.5.1",
    "matplotlib==3.11.0",
    "streamlit==1.59.1",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter; long docstrings/prompts allowed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
